--- a/Uebung2/styles/mystyles.css
+++ b/Uebung2/styles/mystyles.css
@@ -9,9 +9,9 @@ header {
 }
 
 nav {
-    / margin-top: 3%;
-    / margin-bottom: 3%;
-    / background-color: antiquewhite;
+    /* margin-top: 3%;
+    margin-bottom: 3%;
+    background-color: antiquewhite; */
     padding-top: 50px;
     padding-bottom: 50px;
 }
