--- a/Uebung7/src/app/footer/footer.component.css
+++ b/Uebung7/src/app/footer/footer.component.css
@@ -3,6 +3,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 3em;
     background-color: lightgrey;
     color: white;
     text-align: center;
